fixed the profile and search results backgrounds and alignments

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,7 +6,7 @@
   // height: 175px;
   border-radius: 3px;
   border: 5px solid white;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  box-shadow: 0 0 4px rgba(0,0,0,0.5);
   background-position: center;
   background-size: cover;
   margin-bottom: 20px;
